product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/index.mdx
---
title: EDB Postgres AI Hybrid Manager
navTitle: Hybrid Manager
description: EDB Postgres AI Hybrid Manager provides a unified interface for provisioning and managing PostgreSQL clusters within the EDB Postgres AI platform
navigation:
- release_notes
- overview
- install
- using_hybrid_manager
- ai-factory
- analytics
navRootedTo: /edb-postgres-ai
---

**EDB Postgres AI Hybrid Manager** is the control plane of the EDB Postgres AI Platform—a **sovereign AI, analytics, and Postgres management solution** that runs anywhere you run Kubernetes. It offers a unified experience for deploying databases, running GenAI workloads, and scaling Postgres-native analytics across **cloud**, **on-prem**, or **hybrid environments**.

It works on the follow Kubernetes distributions: **Amazon EKS**, **Google GKE**, and **Red Hat OpenShift (RHOS)**.

* * *

## One platform, full control

EDB Hybrid Manager brings together the infrastructure, data, and application layers required to support modern Postgres-based data platforms:

-   **Sovereign AI** — Build and serve AI-powered workloads using your own infrastructure, with full control over GPU resources and GenAI pipelines.
-   **Postgres-native analytics** — Offload to open data formats like Iceberg and Delta Lake while preserving Postgres compatibility and control.
-   **Operational excellence** — Simplify backup, scaling, monitoring, and cluster lifecycle management for Postgres clusters.

Whether deployed in the cloud or on-premises, Hybrid Manager ensures **observability, governance, and resilience** across your data and AI stack.

* * *

## What you can do

| Area                               | Capabilities                                                                                                                                                                                                                                                                        |
| ---------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Database provisioning**          | Deploy highly available PostgreSQL or Distributed Postgres clusters using the console, templates, or declarative manifests.                                                                                                                                                         |
| **AI integration**                 | Run [sovereign GenAI pipelines](ai-factory/), serve models with KServe, and build AI knowledge bases governed by your infrastructure.                                                                                                                                               |
| **Analytics**                      | Offload cold data to [Delta Lake or Iceberg](analytics/), query with Postgres syntax, and enable hybrid transactional/analytical processing.                                                                                                                                        |
| **Monitoring and observability**   | Use the integrated dashboards that leverage Prometheus, Grafana, and Loki to obtain deep visibility into query health, resource usage, and system alerts.                                                                                                                           |
| **Security and access management** | Integrate with identity providers, define RBAC for projects and clusters, and manage secure access to your databases and services.                                                                                                                                                  |
| **Database migration**             | Migrate schemas and data from external databases (Oracle, self-managed Postgres) to HM-managed clusters. Leverage integrated services for migration and schema assessment, data transfer (snapshot), and continuous replication (streaming) to achieve minimal downtime migrations. |

* * *

## Start here

-   [Install Hybrid Manager](./install) → EKS, GKE, RHOS, or custom Kubernetes
-   [Sovereign AI and Data Factory](./system) → Sovereign AI and Data Factory hardware
-   [Using Hybrid Manager](./using_hybrid_manager) → backup/restore, monitoring, migrations, cluster creation, and more
-   [AI Factory](./ai-factory) → sovereign GenAI pipelines, model serving, and retrieval systems
-   [Analytics](./analytics) → Delta Lake, Iceberg, tiered storage, and lakehouse patterns
-   [Release Notes](./release_notes)

* * *

## Learn more
